hphp/hack/test/typecheck/reactive/mayberx2.php.exp
File "mayberx2.php", line 5, characters 3-18:
<<__OnlyRxIfRxFunc>> attribute can only be put on parameters of conditionally reactive function or method annotated with <<__OnlyRxIfArgs>> attribute. (NastCheck[3063])
